@@ -1,3 +1,10 @@
+2011-10-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * tagmanager/php.c:
+   Fix parsing keyword-qualified functions strictly, e.g. don't 
+   parse 'staticfunction' or 'fatfunction'.
+
+
 2011-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/utils.c, src/utils.h, src/editor.c:
